--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   carousel_slider:
   convex_bottom_bar: ^3.2.0
+  toggle_switch: ^2.3.0
   
   device_preview: ^1.2.0
 
