--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,14 @@ dependencies:
   carousel_slider:
   convex_bottom_bar: ^3.2.0
   toggle_switch: ^2.3.0
-  
   device_preview: ^1.2.0
-
+  google_sign_in:
+  firebase_auth:
+  flutter_signin_button:
+  shared_preferences:
+  cloud_firestore:
+  sign_button: ^2.0.6
+  uuid:
 dev_dependencies:
   flutter_test:
     sdk: flutter
