--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,26 +28,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  carousel_slider:
-  convex_bottom_bar: ^3.2.0
-  toggle_switch: ^2.3.0
-  device_preview: ^1.2.0
-  google_sign_in:
-  firebase_auth:
-  flutter_signin_button:
-  shared_preferences:
-  cloud_firestore:
+  carousel_slider: ^5.0.0
+  cloud_firestore: ^5.6.7
   connectivity_plus: ^6.0.5
+  convex_bottom_bar: ^3.2.0
+  cupertino_icons: ^1.0.8
+  device_preview: ^1.2.0
+  firebase_auth: ^5.5.3
+  firebase_core: ^3.13.0
+  flutter_signin_button: ^2.0.0
+  google_sign_in: ^6.3.0
+  shared_preferences: ^2.5.3
   sign_button: ^2.0.6
-  uuid:
+  toggle_switch: ^2.3.0
+  uuid: ^4.5.1
+
 dev_dependencies:
-  flutter_test:
+  flutter:
     sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -56,10 +53,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -70,13 +68,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -85,7 +81,7 @@ flutter:
   fonts:
     - family: Poppins
       fonts:
-         - asset: fonts/Poppins-SemiBold.ttf
+        - asset: fonts/Poppins-SemiBold.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
